--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "morgan": "^1.10.0",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sequelize": "^6.36.0",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -43,6 +46,7 @@
     "@types/jest": "^29.5.2",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.3.1",
+    "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
