--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "morgan": "^1.10.0",
+    "nestjs-sequelize": "^1.1.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
